APIs de Consultation y Area
Se creó y configuró el recurso Consultation con create, getAll, getByUserId y update, además del módulo, DTOs y specs. También se agregó la API de Area con add, list, getById, update y disable lógico, siguiendo la misma estructura del proyecto y conectando PrismaModule para evitar errores de inyección
