# backend/src/area/area.controller.ts
@@ -1,0 +1,67 @@
+import { Controller, Get, Post, Body, Patch, Param, Delete, Query, HttpStatus, HttpCode, UseGuards } from '@nestjs/common';
+import { AreaService } from './area.service';
+import { CreateAreaDto } from './dto/create-area.dto';
+import { UpdateAreaDto } from './dto/update-area.dto';
+import { ApiBearerAuth, ApiTags, ApiOperation, ApiQuery } from '@nestjs/swagger';
+import { JwtAuthGuard } from 'src/auth/guards/jwt-auth.guard';
+import { RolesGuard } from 'src/auth/guards/roles.guard';
+import { Roles } from 'src/auth/decorators/roles.decorator';
+
+@ApiTags('Area')
+@Controller('area')
+export class AreaController {
+  constructor(private readonly areaService: AreaService) {}
+
+  @Post()
+  @HttpCode(HttpStatus.CREATED)
+  @ApiOperation({ summary: 'Crear una nueva área' })
+  @ApiBearerAuth()
+  @UseGuards(JwtAuthGuard, RolesGuard)
+  @Roles('ADMIN')
+  create(@Body() createAreaDto: CreateAreaDto) {
+    return this.areaService.create(createAreaDto);
+  }
+
+  @Get()
+  @HttpCode(HttpStatus.OK)
+  @ApiOperation({ summary: 'Obtener todas las áreas' })
+  @ApiQuery({ name: 'isActive', required: false, type: Boolean })
+  @ApiBearerAuth()
+  @UseGuards(JwtAuthGuard, RolesGuard)
+  @Roles('ADMIN', 'DOCTOR', 'PATIENT')
+  findAll(@Query('isActive') isActive?: string) {
+    const isAct = isActive === 'false' ? false : true;
+    return this.areaService.findAll(isAct);
+  }
+
+  @Get(':id')
+  @HttpCode(HttpStatus.OK)
+  @ApiOperation({ summary: 'Obtener área por ID' })
+  @ApiBearerAuth()
+  @UseGuards(JwtAuthGuard, RolesGuard)
+  @Roles('ADMIN', 'DOCTOR', 'PATIENT')
+  findOne(@Param('id') id: string) {
+    return this.areaService.findOne(id);
+  }
+
+  @Patch(':id')
+  @HttpCode(HttpStatus.OK)
+  @ApiOperation({ summary: 'Actualizar área por ID' })
+  @ApiBearerAuth()
+  @UseGuards(JwtAuthGuard, RolesGuard)
+  @Roles('ADMIN')
+  update(@Param('id') id: string, @Body() updateAreaDto: UpdateAreaDto) {
+    return this.areaService.update(id, updateAreaDto);
+  }
+
+  @Patch(':id/disable')
+  @HttpCode(HttpStatus.OK)
+  @ApiOperation({ summary: 'Desactivar área por ID' })
+  @ApiBearerAuth()
+  @UseGuards(JwtAuthGuard, RolesGuard)
+  @Roles('ADMIN')
+  disable(@Param('id') id: string) {
+    return this.areaService.disable(id);
+  }
+}
+
